# DrawConnect

./: .gitignore  CHANGELOG.md  DrawConnect_项目企划书.md  run_cargo_test.bat
.github/workflows/: build-linux.yml  build-macos.yml  build-release.yml
QING/: .gitignore  APK打包指南.md  README.md  build.gradle.kts  local.properties.example  settings.gradle.kts  交付清单.md  快速启动指南.md  打包完成总结.md  构建APK.bat  构建问题已解决.md  构建问题诊断指南.md  第一阶段完成总结.md  轻画v0.1发布说明.md  项目结构说明.md
app/: build.gradle.kts  gradle.properties  local.properties  proguard-rules.pro
app/src/main/: AndroidManifest.xml
backend/: .env.example  README.md  package-lock.json  package.json  server.js
backend/downloads/: .gitkeep
backend/models/: Artwork.js  Plugin.js  PluginLike.js  User.js
backend/routes/: auth.js  cloud.js  plugins.js
backend/scripts/: seedPlugins.js
core-engine/: Cargo.toml  TESTING.md  run_tests.bat  setup_and_test.ps1
core-engine-wasm/: Cargo.toml
core-engine-wasm/src/: bridge.rs  engine.rs  lib.rs  types.rs
core-engine/.cargo/: config.toml
core-engine/benches/: brush_benchmark.rs  layer_benchmark.rs
core-engine/examples/: basic_drawing.rs
core-engine/src/: error.rs  history.rs  lib.rs  optimize.rs
core-engine/src/adjustments/: black_white.rs  brightness_contrast.rs  color_balance.rs  curves.rs  exposure.rs  hue_saturation.rs  invert.rs  levels.rs  mod.rs  photo_filter.rs  posterize.rs  threshold.rs  vibrance.rs
core-engine/src/brush/: dynamics.rs  mod.rs  preset.rs  settings.rs  texture.rs
core-engine/src/canvas/: mod.rs  tile.rs
core-engine/src/color/: convert.rs  mod.rs  palette.rs  profile.rs
core-engine/src/filters/: mod.rs  pixel_ops.rs
core-engine/src/filters/blur/: box_blur.rs  gaussian.rs  mod.rs  motion.rs  radial.rs
core-engine/src/filters/distort/: mod.rs  ripple.rs  spherize.rs  twirl.rs  wave.rs
core-engine/src/filters/noise/: add_noise.rs  mod.rs  reduce_noise.rs
core-engine/src/filters/render/: clouds.rs  lens_flare.rs  mod.rs  vignette.rs
core-engine/src/filters/sharpen/: high_pass.rs  mod.rs  unsharp_mask.rs
core-engine/src/filters/stylize/: emboss.rs  find_edges.rs  mod.rs  oil_paint.rs  pixelate.rs
core-engine/src/format/: mod.rs
core-engine/src/geometry/: mod.rs
core-engine/src/import/: abr.rs  mod.rs  pat.rs  swatch.rs
core-engine/src/layer/: blend.rs  group.rs  mask.rs  mod.rs
core-engine/src/plugin/: loader.rs  manager.rs  manifest.rs  mod.rs  permissions.rs  registry.rs  sandbox.rs  types.rs
core-engine/src/render/: mod.rs
core-engine/src/selection/: mod.rs
core-engine/src/stroke/: mod.rs
core-engine/src/tools/: mod.rs
core-engine/src/transform/: canvas_resize.rs  crop.rs  flip.rs  image_resize.rs  mod.rs  rotate.rs
core-engine/src/utils/: mod.rs
core-engine/tests/: integration_tests.rs
desktop-app/: index.html  package-lock.json  package.json  run_dev.bat  run_dev.ps1  vite.config.ts
desktop-app/public/plugin-template/: README.md  main.js  manifest.json
desktop-app/src/: App.tsx  main.tsx
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/.cargo/: config.toml
desktop-app/src-tauri/icons/: generate_icons.ps1  icon.icns
desktop-app/src-tauri/src/: main.rs  plugin_commands.rs
desktop-app/src/components/: AdjustmentPanel.css  AdjustmentPanel.tsx  BrushPanel.css  BrushPanel.tsx  Canvas.css  Canvas.tsx  ColorPicker.css  ColorPicker.tsx  EditCanvas.tsx  EditMenuBar.tsx  ImageEditor.tsx  LayerPanel.css  MenuBar.css  MenuBar.tsx  NewCanvasDialog.css  NewCanvasDialog.tsx  PluginManager.css  PluginManager.tsx  StartScreen.css  StartScreen.tsx  Toolbar.css  Toolbar.tsx
desktop-app/src/hooks/: useAdjustmentDialog.ts
desktop-app/src/i18n/: index.ts  zh-CN.ts
desktop-app/src/stores/: appStore.ts  pluginStore.ts
desktop-app/src/styles/: app.css  global.css
docs/plugin-development/: API-Reference.md  README.md
tools/: create-plugin.js
web-app/: index.html  package-lock.json  package.json  vite.config.ts
web-app/src/: App.tsx
web-app/src/api/: client.ts
web-app/src/components/: BrushPanel.tsx  Canvas.css  Canvas.tsx  ImageEditor.css  ImageEditor.tsx  LandingPage.tsx  LayerPanel.tsx  StartScreen.css  StartScreen.tsx
web-app/src/stores/: appStore.ts  navigationStore.ts  pluginStore.ts
web-app/src/styles/: app.css  global.css  landing.css  (+1 more)
(+55 files in other folders)
