[package]
name = "drawconnect-core-wasm"
version = "0.1.0"
edition = "2021"
authors = ["DrawConnect Team"]
description = "DrawConnect Core Engine - WebAssembly Bindings"
license = "MIT"
repository = "https://github.com/drawconnect/core-engine"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Performance",
] }

# Core engine (with WASM-compatible features)
drawconnect-core = { path = "../core-engine", default-features = false, features = ["wasm"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Error handling
thiserror = "1.0"
console_error_panic_hook = { version = "0.1", optional = true }

# Async
futures = "0.3"

# Utils
uuid = { version = "1.6", features = ["v4", "serde", "js"] }
base64 = "0.21"

# Compression (pure Rust for WASM)
lz4_flex = "0.11"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
