[package]
name = "drawconnect-desktop"
version = "0.1.6"
description = "DrawConnect Desktop Application"
authors = ["DrawConnect Team"]
license = "MIT"
repository = "https://github.com/drawconnect/drawconnect"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "dialog-all", "fs-all", "path-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
image = "0.24"
parking_lot = "0.12"

# Link to core engine
drawconnect-core = { path = "../../core-engine" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# 开发模式优化 - 加快编译速度
[profile.dev]
opt-level = 0
debug = false
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 2
